syntax = "proto3";

package blog;

option java_package = "com.proto.blog";
option java_multiple_files = true;

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogRequest {
    //the id doesnt matter
    Blog blog = 1;
}

message CreateBlogResponse {
    //the id is the one stored in mongodb
    Blog blog = 1;
}

message ReadBlogRequest {
    string id = 1;
}

message ReadBlogResponse {
    Blog blog = 1;
}

message UpdateBlogRequest {
    Blog blog = 1;
}

message UpdateBlogResponse {
    Blog blog = 1;
}

service BlogService {
    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};
    //returns NOT_FOUND if the blog can't be found
    rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {};
    rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {};
}